# uvm-systemc

./: .gitignore  AUTHORS  AUTHORS.md  CONTRIBUTING.md  ChangeLog  FAQ  INSTALL  INSTALL.md  Makefile.am  Makefile.in  NEWS  NOTICE  README  README.md  RELEASENOTES  RELEASENOTES.md  aclocal.m4  configure  configure.ac
config/: Make-rules.examples  bootstrap
contrib/crave/: CMakeLists.txt  README.md  buildscript
contrib/crave/cmake/: FindUVM-SystemC.cmake
contrib/crave/examples/: CMakeLists.txt
contrib/crave/examples/CandyLovers/: CMakeLists.txt  sc_main.cpp
contrib/crave/examples/CandyLovers/dut/: jelly_bean_if.h  jelly_bean_taster.h
contrib/crave/examples/CandyLovers/verification/: jelly_bean_agent.h  jelly_bean_configuration.h  jelly_bean_driver.h  jelly_bean_env.h  jelly_bean_monitor.h  jelly_bean_sequencer.h  jelly_bean_test.h
contrib/crave/examples/CandyLovers/verification/sequences/: gift_boxed_jelly_beans_sequence.h  one_jelly_bean_sequence.h  same_flavored_jelly_beans_sequence.h
contrib/crave/examples/CandyLovers/verification/subscribers/: jelly_bean_fc_subscriber.cpp  jelly_bean_fc_subscriber.h  jelly_bean_sb_subscriber.cpp  jelly_bean_sb_subscriber.h  jelly_bean_scoreboard.cpp  jelly_bean_scoreboard.h
contrib/crave/examples/CandyLovers/verification/transactions/: jelly_bean_transaction.h  sugar_free_jelly_bean_transaction.h
contrib/crave/src/include/: crave2uvm.h  uvm_randomized_sequence.h  uvm_randomized_sequence_item.h
contrib/sc_reg/: sc_reg.h
docs/: DEVELOPMENT.md  Makefile.am  Makefile.in  uvm-systemc-language-reference-manual.docx
examples/: Makefile.am  Makefile.in
examples/build-msvc/: uvmsc_examples.sln
examples/uvmsc/: Makefile.am  Makefile.in
msvc14/uvmsc/: uvm-systemc.sln  uvm-systemc.vcxproj
msvc16/uvmsc/: uvm-systemc.sln  (+1 more)
src/: Makefile.am  Makefile.in  config.h.in  uvm  uvm.h
src/uvmsc/dap/: Makefile.am  files.am  uvm_get_to_lock_dap.h  uvm_set_get_dap_base.h
tests/: INSTALL  NOTICE  README.md
(+664 files in other folders)
